update routes and doc
